--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "counter_react",
+  "name": "Counter_React",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://priyanshukansal82.github.io/counter_react/",
+  "homepage": "https://priyanshukansal82.github.io/Counter_React/",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -11,10 +11,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/priyanshukansal82/counter_react.git"
+    "url": "git+https://github.com/priyanshukansal82/Counter_React.git"
   },
   "bugs": {
-    "url": "https://github.com/priyanshukansal82/counter_react/issues"
+    "url": "https://github.com/priyanshukansal82/Counter_React/issues"
   },
   "scripts": {
     "start": "react-scripts start",
